x-button - fix alignment of x-button

--- a/packages/ui/src/5-elements/form/_x-button.scss
+++ b/packages/ui/src/5-elements/form/_x-button.scss
@@ -13,7 +13,6 @@
   border-radius: var(--border-radius-circular);
 
   display:inline-grid; place-content:center; line-height:1; flex-shrink:0;
-  [class*="icon"]::before { vertical-align:pxToRem(-3); }
 
   #{$theme-dark} & {
     --p-text-color: var(--color-neutral-50);
